objects/Merged_Child_Record_History__c.object
<CustomObject>
    <description>Field history for child records of merged records, used as a backup so child records can be restored on un-merge. This table is needed because field history tracking does not record re-parenting children of merged records.</description>
    <fields>
        <fullName>Child_Record_Id__c</fullName>
        <label>Child Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Record_Id__c</fullName>
        <label>Master Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged_Record_Id__c</fullName>
        <label>Merged Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Merged Child Record History</label>
    <nameField>
        <label>Merged Child Record History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merged Child Record Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>